--- a/mamoiy/index.html
+++ b/mamoiy/index.html
@@ -9,7 +9,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="icon" href="resources/favicon.png" />
 </head>
-<audio class="audio" src="resources/hbd.mp3" autoplay type="audio" loop></audio>
+<audio class="audio" src="resources/HBD.mp3" autoplay type="audio" loop></audio>
 
 <body class="body">
   <div class="open">
